<resources>
    <string name="app_name">My Application8</string>
    <string name="title">My First Book</string>
    <string name="learn">Learning Module</string>
    <string name="qiiz">Quiz Module</string>
    <string name="one">ONE</string>
    <string name="one1">1</string>
    <string name="two">TWO</string>
    <string name="two1">2</string>
    <string name="three">THREE</string>
    <string name="three1">3</string>
    <string name="four">FOUR</string>
    <string name="four1">4</string>
    <string name="five">FIVE</string>
    <string name="five1">5</string>
    <string name="six">SIX</string>
    <string name="six1">6</string>
    <string name="seven">SEVEN</string>
    <string name="seven1">7</string>
    <string name="eight">EIGHT</string>
    <string name="eight1">8</string>
    <string name="nine">NINE</string>
    <string name="nine1">9</string>
    <string name="ten">TEN</string>
    <string name="ten1">10</string>
    <string name="lrn">START LEARNING</string>
    <string name="nxt">Next</string>
    <string name="previous">Prev</string>
    <string name="quiz">Attempt Quiz</string>
    <string name="title2">Welcome to Quiz Module</string>
    <string name="start">Start Quiz Now</string>
    <string name="choose">Choose Correct Option</string>
    <string name="end">Submit</string>
    <string name="score">Your Score is:</string>
    <string name="home">Back To Home Page</string>





</resources>