<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="322dp"
        android:layout_height="184dp"
        android:layout_marginTop="51dp"
        android:background="#5D2AB8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="101dp"
            android:layout_height="119dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/two"
            android:textColor="#FCFDFD"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/banana" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="111dp"
            android:layout_height="112dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/two1"
            android:textColor="#FBF8F8"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="191dp"
        android:background="#5D2AB8"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="101dp"
            android:layout_height="119dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/one"
            android:textColor="#FCFDFD"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="134dp"
            android:layout_height="137dp"
            android:layout_marginTop="30dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/one" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="111dp"
            android:layout_height="112dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/one1"
            android:textColor="#FBF8F8"
            android:textSize="34sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="210dp"
        android:layout_height="39dp"
        android:layout_marginTop="68dp"
        android:text="@string/lrn"
        android:textColor="#6026C6"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:onClick="nxt"
        android:text="@string/nxt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:onClick="prev"
        android:text="@string/previous"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.293" />
</androidx.constraintlayout.widget.ConstraintLayout>