<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/button8"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:onClick="prev"
        android:text="@string/previous"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/button4"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:onClick="nxt"
        android:text="@string/nxt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="195dp"
        android:layout_marginTop="80dp"
        android:background="#5D2AB8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="101dp"
            android:layout_height="119dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="6dp"
            android:text="@string/three"
            android:textColor="#FCFDFD"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="156dp"
            android:layout_height="171dp"
            android:layout_marginTop="30dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/apple" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="111dp"
            android:layout_height="112dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/three1"
            android:textColor="#FBF8F8"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="348dp"
        android:layout_height="182dp"
        android:layout_marginTop="64dp"
        android:background="#5D2AB8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="101dp"
            android:layout_height="119dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/four"
            android:textColor="#FCFDFD"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/lock" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/four1"
            android:textColor="#FBF8F8"
            android:textSize="34sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>