<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bag" />

    <RadioGroup
        android:layout_width="348dp"
        android:layout_height="53dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/one1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="119dp"
            android:layout_height="match_parent"
            android:text="@string/two1" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three1" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>