<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <Button
        android:id="@+id/button12"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:onClick="attemp"
        android:text="@string/quiz"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="@+id/button11" />

    <Button
        android:id="@+id/button11"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:onClick="prev"
        android:text="@string/previous"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.333" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="332dp"
        android:layout_height="218dp"
        android:layout_marginTop="48dp"
        android:background="#5D2AB8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="101dp"
            android:layout_height="119dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/ten"
            android:textColor="#FCFDFD"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/caps" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="111dp"
            android:layout_height="112dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/ten1"
            android:textColor="#FBF8F8"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="341dp"
        android:layout_height="218dp"
        android:layout_marginTop="64dp"
        android:background="#5D2AB8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="101dp"
            android:layout_height="119dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="6dp"
            android:text="@string/nine"
            android:textColor="#FCFDFD"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="156dp"
            android:layout_height="171dp"
            android:layout_marginTop="30dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/cups" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="111dp"
            android:layout_height="112dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/nine1"
            android:textColor="#FBF8F8"
            android:textSize="34sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>