<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <Button
        android:id="@+id/button9"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="38dp"
        android:text="@string/previous"
        android:textSize="20sp"
        android:onClick="prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="412dp"
        android:layout_height="225dp"
        android:layout_marginTop="400dp"
        android:background="#5D2AB8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="101dp"
            android:layout_height="119dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/six"
            android:textColor="#FCFDFD"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/pencil" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="111dp"
            android:layout_height="112dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/six1"
            android:textColor="#FBF8F8"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="225dp"
        android:layout_marginTop="100dp"
        android:background="#5D2AB8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="101dp"
            android:layout_height="119dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="6dp"
            android:text="@string/five"
            android:textColor="#FCFDFD"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="156dp"
            android:layout_height="171dp"
            android:layout_marginTop="30dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/car" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="111dp"
            android:layout_height="112dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/five1"
            android:textColor="#FBF8F8"
            android:textSize="34sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginStart="267dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        android:text="@string/nxt"
        android:textSize="20sp"
        android:onClick="nxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>