<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".MainActivity8">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="42dp"
            android:layout_height="29dp"
            android:layout_marginTop="72dp"
            android:text="@string/one1"
            android:textColor="#5E27C1"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="238dp"
            android:layout_height="189dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@drawable/bag" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox2"
            app:layout_constraintStart_toStartOf="@+id/imageView5" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/checkBox3"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/checkBox2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="277dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:text="@string/choose"
            android:textColor="#6531C1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="34dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:text="@string/two1"
            android:textColor="#5E2BB8"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/checkBox7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.49" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="268dp"
            android:layout_height="210dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2"
            app:srcCompat="@drawable/goats" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="1"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox8"
            app:layout_constraintStart_toStartOf="@+id/imageView7" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/checkBox9"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toEndOf="@+id/checkBox7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/checkBox8" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="nxt"
            android:text="@string/nxt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/checkBox9"
            app:layout_constraintTop_toBottomOf="@+id/checkBox9"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="prev"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/checkBox7"
            app:layout_constraintTop_toBottomOf="@+id/checkBox7"
            app:layout_constraintVertical_bias="0.029" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>